--- a/index.html
+++ b/index.html
@@ -10,16 +10,17 @@
 
 <body class="page">
     <div class="page__container">
+
+        <header class="header">
+            <img src="./images/headerLogo.svg" alt="логотип" class="header__logo">
+        </header>
         <main class="main">
-            <header class="header">
-                <img src="./images/headerLogo.svg" alt="логотип" class="header__logo">
-            </header>
             <section class="profile">
                 <img src="./images/Avatar.png" alt="Аватар" class="profile__avatar">
                 <div class="profile__info">
                     <div class="profile__info-edit">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
-                        <button class="profile__button-edit popup-open" type="button"></button>
+                        <button class="profile__button-edit" type="button"></button>
                     </div>
                     <p class="profile__profession">Исследователь океана</p>
                 </div>
@@ -28,32 +29,32 @@
             <section class="elements">
                 <div class="elements__item">
                     <img src="./images/karachaevsk.jpg" alt="храм" class="elements__photo">
-                    <p class="elements__paragraph">Карачаевск</p>
+                    <h2 class="elements__paragraph">Карачаевск</h2>
                     <button class="elements__button-like" type="button"></button>
                 </div>
                 <div class="elements__item">
                     <img src="./images/elbrus.png" alt="горы" class="elements__photo">
-                    <p class="elements__paragraph">Гора Эльбрус</p>
+                    <h2 class="elements__paragraph">Гора Эльбрус</h2>
                     <button class="elements__button-like" type="button"></button>
                 </div>
                 <div class="elements__item">
                     <img src="./images/dombay.png" alt="горы" class="elements__photo">
-                    <p class="elements__paragraph">Домбай</p>
+                    <h2 class="elements__paragraph">Домбай</h2>
                     <button class="elements__button-like" type="button"></button>
                 </div>
                 <div class="elements__item">
                     <img src="./images/elbrus.png" alt="горы" class="elements__photo">
-                    <p class="elements__paragraph">Гора Эльбрус</p>
+                    <h2 class="elements__paragraph">Гора Эльбрус</h2>
                     <button class="elements__button-like" type="button"></button>
                 </div>
                 <div class="elements__item">
                     <img src="./images/dombay.png" alt="горы" class="elements__photo">
-                    <p class="elements__paragraph">Домбай</p>
+                    <h2 class="elements__paragraph">Домбай</h2>
                     <button class="elements__button-like" type="button"></button>
                 </div>
                 <div class="elements__item">
                     <img src="./images/karachaevsk.jpg" alt="храм" class="elements__photo">
-                    <p class="elements__paragraph">Карачаево-Черкессия</p>
+                    <h2 class="elements__paragraph">Карачаево-Черкессия</h2>
                     <button class="elements__button-like" type="button"></button>
                 </div>
             </section>
@@ -67,11 +68,12 @@
         <div class="popup__container">
             <button class="popup__close" type="button" aria-label="Закрыть попап"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
-            <form class="popup__input">
-                <input type='text' class='popup__name' value="Жак-Ив Кусто" placeholder="Имя">
-                <input type='text' class='popup__profession' value="Исследователь океана" placeholder="Профессия">
+            <form class="popup__input" name="author-info">
+                <input type='text' name="firstname" class='popup__field popup_input_name' value="Жак-Ив Кусто" placeholder="Имя">
+                <input type='text' name="profession" class='popup__field popup_input_profession' value="Исследователь океана" placeholder="Профессия">
+                <button class='popup__save' type="submit" name="submit" value='submit' aria-label="Сохранить попап">Сохранить</button>
             </form>
-            <button class="popup__save" type="submit" aria-label="Сохранить попап">Сохранить</button>
+
         </div>
     </div>
 
