--- a/index.html
+++ b/index.html
@@ -69,8 +69,8 @@
             <button class="popup__close" type="button" aria-label="Закрыть попап"></button>
             <h2 class="popup__title">Редактировать профиль</h2>
             <form class="popup__input" name="author-info">
-                <input type='text' name="firstname" class='popup__field popup_text_name' value="Жак-Ив Кусто" placeholder="Имя">
-                <input type='text' name="profession" class='popup__field popup_text_profession' value="Исследователь океана" placeholder="Профессия">
+                <input type='text' name="firstname" class='popup__field popup__field_text_name' value="Жак-Ив Кусто" placeholder="Имя">
+                <input type='text' name="profession" class='popup__field popup__field_text_profession' value="Исследователь океана" placeholder="Профессия">
                 <button class='popup__save' type="submit" name="submit" value='submit' aria-label="Сохранить попап">Сохранить</button>
             </form>
 
