fix: change popup-zoom background and cursor

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
         </div>
     </template>
 
-    <div class="popup popup-zoom">
+    <div class="popup popup-zoom popup_dark">
         <div class="popup__zoom">
             <button class="popup__close" type="button"></button>
             <figure class="popup__photo">
