--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     </div>
 
     <script src="./scripts/main.js"></script>
-    <script src="./scripts/validation.js"></script>
+    <script src="./scripts/validate.js"></script>
 
 </body>
 
