--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@
         </div>
     </div>
 
+    <script src="./scripts/constants.js"></script>
     <script src="./scripts/main.js"></script>
     <script src="./scripts/validate.js"></script>
 
