--- a/index.html
+++ b/index.html
@@ -92,9 +92,7 @@
         </div>
     </div>
 
-    <script src="./scripts/constants.js"></script>
-    <script src="./scripts/main.js"></script>
-    <script src="./scripts/validate.js"></script>
+    <script src="./scripts/index.js" type="module"></script>
 
 </body>
 
