--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
         </header>
         <main class="main">
             <section class="profile">
-                <img src="<%=require('./images/Avatar.png')%>" alt="Аватар" class="profile__avatar">
+                <div class="profile__avatar-container">
+                    <img src="<%=require('./images/Avatar.png')%>" alt="Аватар" class="profile__avatar">
+                    <button type="button" class="profile__edit-avatar"></button>
+                </div>
+
                 <div class="profile__info">
                     <div class="profile__info-edit">
                         <h1 class="profile__name">Жак-Ив Кусто</h1>
@@ -76,7 +80,10 @@
           <img src="#" alt="#" class="elements__photo">
           <button class="elements__button-delete" type="button"></button>
           <h2 class="elements__paragraph"></h2>
-          <button class="elements__button-like" type="button"></button>
+          <div class="elements__group-like">
+            <button class="elements__button-like" type="button"></button>
+            <p class="elements__number-like">1</p>
+          </div>
         </div>
     </template>
 
@@ -90,7 +97,30 @@
         </div>
     </div>
 
-    <script src="./pages/index.js" type="module"></script>
+
+    <div class="popup popup-confirm">
+        <div class="popup__container">
+            <button class="popup__close" type="button" aria-label="Закрыть попап"></button>
+            <h2 class="popup__title">Вы уверены?</h2>
+            <button class='popup__confirm' type="submit" name="submit" aria-label="Да">Да</button>
+        </div>
+    </div>
+
+    <div class="popup popup-avatar">
+        <div class="popup__container">
+            <button class="popup__close" type="button" aria-label="Закрыть попап"></button>
+            <h2 class="popup__title">Обновить аватар</h2>
+            <form class="popup__form" name="new-avatar">
+                <fieldset class="popup__form-set">
+                    <label class="popup__input-container">
+                        <input id="link-input" type='url' name="link" required class='popup__field popup__field_avatar_link' placeholder="Ссылка на аватар">
+                        <span class="popup__input-error link-input-error"></span>
+                    </label>
+                    <button class='popup__save' type="submit" name="submit" aria-label="Сохранить попап">Сохранить</button>
+                </fieldset>
+            </form>
+        </div>
+    </div>
 
 </body>
 
