--- a/src/index.html
+++ b/src/index.html
@@ -113,8 +113,8 @@
             <form class="popup__form" name="new-avatar">
                 <fieldset class="popup__form-set">
                     <label class="popup__input-container">
-                        <input id="link-input" type='url' name="link" required class='popup__field popup__field_avatar_link' placeholder="Ссылка на аватар">
-                        <span class="popup__input-error link-input-error"></span>
+                        <input id="avatar-input" type='url' name="link" required class='popup__field popup__field_avatar_link' placeholder="Ссылка на аватар">
+                        <span class="popup__input-error avatar-input-error"></span>
                     </label>
                     <button class='popup__save' type="submit" name="submit" aria-label="Сохранить попап">Сохранить</button>
                 </fieldset>
