fix: fix bugs after 1st review

--- a/src/index.html
+++ b/src/index.html
@@ -82,7 +82,7 @@
           <h2 class="elements__paragraph"></h2>
           <div class="elements__group-like">
             <button class="elements__button-like" type="button"></button>
-            <p class="elements__number-like">1</p>
+            <p class="elements__number-like"></p>
           </div>
         </div>
     </template>
